--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       font-size: 2.2rem;
       font-weight: 600;
       color: var(--color-text);
-      text-shadow: 0 0 1px var(--color-white);
+      text-shadow: 0 0 1px var(--color-border);
     }
 
     .nav-wrapper {
@@ -54,6 +54,7 @@
     nav {
       display: flex;
       justify-content: center;
+      gap: 1.5rem;
       background: var(--color-white);
       border: 1px solid var(--color-border);
       border-radius: var(--border-radius);
@@ -65,6 +66,7 @@
     }
 
     nav a {
+      color: var(--color-text);
       padding: 0.1rem 1rem;
       font-weight: 600;
       font-size: 1.1rem;
@@ -72,6 +74,7 @@
       transition: background-color 0.25s ease;
       text-shadow: 0 0 1px var(--color-white);
       border-radius: var(--border-radius);
+      letter-spacing: 0.03em;
     }
 
     nav a:hover {
@@ -119,9 +122,13 @@
     }
 
     .gallery-item img {
-$1
-  border: none;
-}
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      cursor: pointer;
+      border: none;
+    }
 
     form {
       display: flex;
@@ -171,11 +178,9 @@ $1
   </style>
 </head>
 <body>
-  <div style="max-width: var(--max-width); margin: 0 auto;">
-<header>
+  <header>
     <h1>Michael Schimkus</h1>
   </header>
-</div>
 
   <div class="nav-wrapper">
     <nav>
@@ -218,20 +223,20 @@ $1
   </div>
 
   <div class="footer-wrapper">
-    <div style="max-width: var(--max-width); margin: 0 auto;">
-<footer>
+    <footer>
       <p>&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration: none; color: var(--color-text); text-shadow: 0 0 1px var(--color-white); font-size: 0.9rem;">Return to top</a></p>
     </footer>
-</div>
   </div>
 
+  <!-- Lightbox -->
   <div id="lightbox" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:9999;">
     <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:10px;" alt="Enlarged image">
   </div>
 
   <script>
+    // Highlight current nav link on scroll
     const navLinks = document.querySelectorAll('.nav-link');
-    const sections = document.querySelectorAll('main section, .card');
+    const sections = document.querySelectorAll('section');
 
     function setActiveLink(id) {
       navLinks.forEach(link => {
@@ -242,7 +247,7 @@ $1
     function updateActiveSection() {
       let current = '';
       sections.forEach(section => {
-        const offset = section.offsetTop - 120;
+        const offset = section.offsetTop - 150;
         if (pageYOffset >= offset) current = section.id;
       });
       if (current) setActiveLink(current);
@@ -251,6 +256,7 @@ $1
     window.addEventListener('scroll', updateActiveSection);
     updateActiveSection();
 
+    // Lightbox
     const galleryImages = document.querySelectorAll('.gallery-item img');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
