--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       font-family: 'Public Sans', sans-serif;
       background: var(--color-primary-light);
       color: var(--color-text);
+  text-shadow: 0 0 1px var(--color-border);
       line-height: 1.6;
       scroll-behavior: smooth;
     }
@@ -43,7 +44,7 @@
       font-size: 2.2rem;
       font-weight: 600;
       color: var(--color-text);
-      text-shadow: 0 0 1px var(--color-border);
+      text-shadow: 0 0 1px var(--color-white);
     }
 
     .nav-wrapper {
@@ -52,9 +53,14 @@
     }
 
     nav {
+  position: sticky;
+  top: 0;
+  background: var(--color-white);
+  z-index: 999;
+  gap: 1.5rem;
       display: flex;
-      justify-content: center;
-      gap: 1.5rem;
+  justify-content: center;
+  gap: 1.5rem;
       background: var(--color-white);
       border: 1px solid var(--color-border);
       border-radius: var(--border-radius);
@@ -66,7 +72,7 @@
     }
 
     nav a {
-      color: var(--color-text);
+      letter-spacing: 0.03em;
       padding: 0.1rem 1rem;
       font-weight: 600;
       font-size: 1.1rem;
@@ -74,7 +80,6 @@
       transition: background-color 0.25s ease;
       text-shadow: 0 0 1px var(--color-white);
       border-radius: var(--border-radius);
-      letter-spacing: 0.03em;
     }
 
     nav a:hover {
@@ -122,13 +127,9 @@
     }
 
     .gallery-item img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-      cursor: pointer;
-      border: none;
-    }
+$1
+  border: none;
+}
 
     form {
       display: flex;
@@ -178,16 +179,18 @@
   </style>
 </head>
 <body>
-  <header>
+  <div style="max-width: var(--max-width); margin: 0 auto;">
+<header>
     <h1>Michael Schimkus</h1>
   </header>
+</div>
 
-  <div class="nav-wrapper">
-    <nav>
+  <div class="nav-wrapper" style="max-width: var(--max-width); margin: 0 auto;">
+    <div style="max-width: var(--max-width); margin: 0 auto;"><nav>
       <a href="#about" class="nav-link">About</a>
       <a href="#portfolio" class="nav-link">Portfolio</a>
       <a href="#contact" class="nav-link">Contact</a>
-    </nav>
+    </nav></div>
   </div>
 
   <div class="content-wrapper">
@@ -222,21 +225,21 @@
     </section>
   </div>
 
-  <div class="footer-wrapper">
-    <footer>
+  <div class="footer-wrapper" style="max-width: var(--max-width); margin: 1rem auto;">
+    <div style="max-width: var(--max-width); margin: 0 auto;">
+<div style="max-width: var(--max-width); margin: 0 auto;"><footer>
       <p>&copy; 2025 Michael Schimkus | <a href="#" style="text-decoration: none; color: var(--color-text); text-shadow: 0 0 1px var(--color-white); font-size: 0.9rem;">Return to top</a></p>
-    </footer>
+    </footer></div>
+</div>
   </div>
 
-  <!-- Lightbox -->
   <div id="lightbox" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:9999;">
     <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:10px;" alt="Enlarged image">
   </div>
 
   <script>
-    // Highlight current nav link on scroll
     const navLinks = document.querySelectorAll('.nav-link');
-    const sections = document.querySelectorAll('section');
+    const sections = document.querySelectorAll('main section, .card');
 
     function setActiveLink(id) {
       navLinks.forEach(link => {
@@ -247,7 +250,7 @@
     function updateActiveSection() {
       let current = '';
       sections.forEach(section => {
-        const offset = section.offsetTop - 150;
+        const offset = section.offsetTop - 120;
         if (pageYOffset >= offset) current = section.id;
       });
       if (current) setActiveLink(current);
@@ -256,7 +259,6 @@
     window.addEventListener('scroll', updateActiveSection);
     updateActiveSection();
 
-    // Lightbox
     const galleryImages = document.querySelectorAll('.gallery-item img');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
