--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       padding: 0 1rem;
     }
 
-    /* Header */
     header {
       text-align: center;
       padding: 1rem 0 0.5rem;
@@ -49,13 +48,10 @@
       text-shadow: 0 0 1px var(--color-border);
     }
 
-    /* Sticky Nav */
     nav {
-      position: fixed;
+      position: sticky;
       top: 0;
-      left: 0;
-      right: 0;
-      z-index: 100;
+      width: 100%;
       display: flex;
       justify-content: center;
       gap: 1.5rem;
@@ -64,8 +60,8 @@
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       padding: 0.2rem 0;
-      max-width: var(--max-width);
-      margin: 0 auto;
+      margin-bottom: 1rem;
+      z-index: 100;
     }
     nav a {
       color: var(--color-text);
@@ -78,21 +74,16 @@
       border-radius: var(--border-radius);
       letter-spacing: 0.03em;
     }
-    nav a:hover {
-      background-color: rgba(157,206,233,0.2);
-    }
-    nav a.active {
-      background-color: var(--highlight-bg);
-    }
+    nav a:hover { background-color: rgba(157,206,233,0.2); }
+    nav a.active { background-color: var(--highlight-bg); }
 
-    /* Main Content */
     main {
-      padding-top: 4rem; /* account for fixed nav */
       padding-bottom: 1rem;
+      scroll-margin-top: calc(1rem + 2.2rem); /* offset for nav stick */
     }
     .section-title {
       font-size: 1.7rem;
-      font-weight: 800; /* Updated to extra bold */
+      font-weight: 800;
       margin: 1rem 0 0.3rem;
       text-shadow: 0 0 1px var(--color-white);
     }
@@ -105,7 +96,6 @@
       margin-bottom: 1.5rem;
     }
 
-    /* Gallery */
     .gallery {
       display: flex;
       flex-direction: column;
@@ -125,7 +115,6 @@
       margin-bottom: 0.5rem;
     }
 
-    /* Form */
     form {
       display: flex;
       flex-direction: column;
@@ -147,7 +136,6 @@
       cursor: pointer;
     }
 
-    /* Footer */
     footer.footer {
       text-align: center;
       padding: 0.5rem;
@@ -161,7 +149,13 @@
       text-shadow: 0 0 1px var(--color-white);
     }
 
-    /* Lightbox */
+    .version {
+      text-align: center;
+      font-size: 0.8rem;
+      color: var(--color-text);
+      margin-bottom: 1rem;
+    }
+
     #lightbox {
       position: fixed;
       inset: 0;
@@ -190,6 +184,7 @@
       <h1>Michael Schimkus</h1>
     </header>
   </div>
+
   <div class="container">
     <nav>
       <a href="#about" class="nav-link">About</a>
@@ -197,12 +192,14 @@
       <a href="#contact" class="nav-link">Contact</a>
     </nav>
   </div>
+
   <main class="container">
     <h2 class="section-title">About</h2>
     <section id="about" class="card">
       <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be. It gives visitors a brief introduction.</p>
       <p>This is a second sample paragraph for demonstration purposes. You might include hobbies, your work ethic, or what makes you unique.</p>
     </section>
+
     <h2 class="section-title">Portfolio</h2>
     <section id="portfolio" class="card">
       <div class="gallery">
@@ -216,6 +213,7 @@
         </div>
       </div>
     </section>
+
     <h2 class="section-title">Contact</h2>
     <section id="contact" class="card">
       <form>
@@ -226,14 +224,18 @@
       </form>
     </section>
   </main>
+
   <div class="container">
     <footer class="footer">
       &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a>
     </footer>
+    <div class="version">version 1</div>
   </div>
+
   <div id="lightbox">
     <img id="lightbox-img" src="" alt="Enlarged image" />
   </div>
+
   <script>
     const navLinks = document.querySelectorAll('.nav-link');
     const sections = document.querySelectorAll('section');
@@ -242,11 +244,12 @@
     }
     function updateActiveSection() {
       let current = '';
-      sections.forEach(sec => { if (window.pageYOffset >= sec.offsetTop - 120) current = sec.id; });
+      sections.forEach(sec => { if (window.pageYOffset >= sec.offsetTop - document.querySelector('nav').offsetHeight) current = sec.id; });
       if (current) setActiveLink(current);
     }
     window.addEventListener('scroll', updateActiveSection);
     updateActiveSection();
+
     document.querySelectorAll('.gallery-item img').forEach(img => {
       img.addEventListener('click', () => {
         const lb = document.getElementById('lightbox');
